[package]
name = "grpc-hello"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "payment-server"
path = "src/server.rs"

[[bin]]
name = "payment-client"
path = "client/client.rs"



[dependencies]
tonic = "0.7.2"
prost = "0.10.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }


[build-dependencies]
tonic-build = "0.7"